# SDI_Service

./: .gitignore  Dockerfile  digset.py  example.env  export.py  main.py  pyproject.toml  readme.md  requirements.txt  test.py
model/: __init__.py  models.py  predictor.py
routers/: __init__.py  calculators.py
utils/: __init__.py  auth.py  image.py  mask.py  predictor.py  processor.py
